[package]
name = "limeltl"
version = "1.0.1"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta"
itertools = "0.9.0"
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
varisat = "0.2.1"
